@@ -1313,7 +1313,11 @@ command is invoked."
 			 (if (fboundp 'project-root)
 			     (project-root proj)
 			   (car (project-roots proj)))))
-	 (buffer-name "*gptel-agent*")
+	 (project-name (and project-root
+			    (file-name-nondirectory (directory-file-name project-root))))
+	 (buffer-name (if project-name
+			  (format "*gptel-agent : %s*" project-name)
+			"*gptel-agent*"))
 	 (existing-buffer-p (get-buffer buffer-name))
 	 (guidelines nil))
     (gptel buffer-name)
