@@ -1,5 +1,10 @@
 2025-09-07  Zhengyi Fu  <i@fuzy.me>
 
+	* site-lisp/gptel-config.el (gptel-agent): Use project specific
+	gptel-agent buffer name.
+
+2025-09-07  Zhengyi Fu  <i@fuzy.me>
+
 	Improve +gptel-edit-file-async function and update error message.
 
 	* site-lisp/gptel-config.el (+gptel-edit-file-async): Improve window
